fix: serverless now deploys
Client also connects, but fails on auth

--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/aws-lambda": "^8.10.39",
     "@types/jsonwebtoken": "^8.3.5",
     "@types/node": "^10.17.12",
+    "@types/uuid": "^3.4.6",
     "aws-sdk": "^2.596.0",
     "serverless-aws-documentation": "^1.1.0",
     "serverless-iam-roles-per-function": "^1.0.4",
