--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: serverless-todo-app
+  name: serverless-todo-app-v2
 
 plugins:
   - serverless-webpack
@@ -11,6 +11,15 @@ provider:
 
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'eu-west-2'}
+
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - dynamodb:Scan
+        - dynamodb:GetItem
+        - dynamodb:PutItem
+      Resource:  'arn:aws:dynamodb:eu-west-2:*:*'
+
 
   environment:
     TODO_TABLE: Todo-${self:provider.stage}
@@ -27,6 +36,7 @@ functions:
       - http:
           method: get
           path: todos
+          cors: true
 
   CreateTodo:
     handler: src/lambda/http/createTodo.handler
@@ -34,6 +44,7 @@ functions:
       - http:
           method: post
           path: todos
+          cors: true
 
   UpdateTodo:
     handler: src/lambda/http/updateTodo.handler
@@ -41,6 +52,7 @@ functions:
       - http:
           method: put
           path: todos/{todoId}
+          cors: true
 
   DeleteTodo:
     handler: src/lambda/http/deleteTodo.handler
@@ -48,6 +60,7 @@ functions:
       - http:
           method: delete
           path: todos/{todoId}
+          cors: true
 
   # TODO: Configure this function
   # GenerateUploadUrl:
@@ -56,6 +69,7 @@ functions:
   #     - http:
   #         method: post
   #         path: todos/{todoId}/attachment
+          # cors: true
 
 resources:
   Resources:
@@ -71,6 +85,7 @@ resources:
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.TODO_TABLE}
+
     
     UploadBucket:
       Type: AWS::S3::Bucket
