--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -18,6 +18,7 @@ provider:
         - dynamodb:Scan
         - dynamodb:GetItem
         - dynamodb:PutItem
+        - dynamodb:DeleteItem
       Resource:  'arn:aws:dynamodb:eu-west-2:*:*'
 
 
