feat: Image display on todo list

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -19,6 +19,7 @@ provider:
         - dynamodb:GetItem
         - dynamodb:PutItem
         - dynamodb:DeleteItem
+        - dynamodb:UpdateItem
       Resource: "arn:aws:dynamodb:eu-west-2:*:*"
 
   environment:
