--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,5 +1,5 @@
 service:
-  name: serverless-todo-app-v2
+  name: serverless-todo-app
 
 plugins:
   - serverless-webpack
@@ -25,6 +25,7 @@ provider:
   environment:
     TODO_TABLE: Todo-${self:provider.stage}
     FILE_UPLOAD_S3_BUCKET: steves-file-upload-bucket-${self:provider.stage}
+    INDEX_NAME: user-index
 
 functions:
   Auth:
@@ -78,11 +79,22 @@ resources:
         AttributeDefinitions:
           - AttributeName: todoId
             AttributeType: S
+          - AttributeName: userId
+            AttributeType: S
         KeySchema:
           - AttributeName: todoId
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
         TableName: ${self:provider.environment.TODO_TABLE}
+        GlobalSecondaryIndexes:
+          - IndexName: ${self:provider.environment.INDEX_NAME}
+            KeySchema:
+              - AttributeName: todoId
+                KeyType: HASH
+              - AttributeName: userId
+                KeyType: RANGE
+            Projection:
+              ProjectionType: ALL # What attributes will be copied to an index
 
     UploadBucket:
       Type: AWS::S3::Bucket
