--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -7,7 +7,7 @@ plugins:
 
 package:
   individually: true
-  
+
 provider:
   name: aws
   runtime: nodejs8.10
@@ -15,18 +15,9 @@ provider:
   stage: ${opt:stage, 'dev'}
   region: ${opt:region, 'eu-west-2'}
 
-  iamRoleStatements:
-    - Effect: Allow
-      Action:
-        - dynamodb:Scan
-        - dynamodb:GetItem
-        - dynamodb:PutItem
-        - dynamodb:DeleteItem
-        - dynamodb:UpdateItem
-      Resource: "arn:aws:dynamodb:eu-west-2:*:*"
-
   environment:
     TODO_TABLE: Todo-${self:provider.stage}
+    TODO_TABLE_ARN: "arn:aws:dynamodb:eu-west-2:*:table/${self:provider.environment.TODO_TABLE}"
     FILE_UPLOAD_S3_BUCKET: steves-file-upload-bucket-${self:provider.stage}
     INDEX_NAME: user-index
 
@@ -41,6 +32,10 @@ functions:
           method: get
           path: todos
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action: dynamodb:Scan
+        Resource: ${self:provider.environment.TODO_TABLE_ARN}
 
   CreateTodo:
     handler: src/lambda/http/createTodo.handler
@@ -49,6 +44,10 @@ functions:
           method: post
           path: todos
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action: dynamodb:PutItem
+        Resource: ${self:provider.environment.TODO_TABLE_ARN}
 
   UpdateTodo:
     handler: src/lambda/http/updateTodo.handler
@@ -57,6 +56,12 @@ functions:
           method: put
           path: todos/{todoId}
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:GetItem # Get item to obtain current value "defaults" before updating
+          - dynamodb:UpdateItem
+        Resource: ${self:provider.environment.TODO_TABLE_ARN}
 
   DeleteTodo:
     handler: src/lambda/http/deleteTodo.handler
@@ -65,6 +70,10 @@ functions:
           method: delete
           path: todos/{todoId}
           cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action: dynamodb:DeleteItem
+        Resource: ${self:provider.environment.TODO_TABLE_ARN}
 
   GenerateUploadUrl:
     handler: src/lambda/http/generateUploadUrl.handler
@@ -127,6 +136,6 @@ resources:
             - Sid: PublicReadForGetBucketObjects
               Effect: Allow
               Principal: "*"
-              Action: ["s3:GetObject","s3:Put*"]
+              Action: ["s3:GetObject", "s3:Put*"]
               Resource: "arn:aws:s3:::${self:provider.environment.FILE_UPLOAD_S3_BUCKET}/*"
         Bucket: { Ref: UploadBucket }
